finish: mathematics section

--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 body {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  min-height: 100vh;
+  margin: 0;
+  background-image: url("img/canvas_background.jpg");
+  background-size: cover;
+  background-position: center top;
 }
 
 canvas {
